data/derived/comb/progs/unify/prog8146.ml.out
Characters 173-178:
  |[] -> if i * h > 10 then [carry i h] @ [remainder i h] else i * h
                                                               ^^^^^
Error: This expression has type int but an expression was expected of type
         int list
